// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button disabled prop sets 1`] = `
<button
  className="hPZwFI"
  disabled={true}
/>
`;

exports[`Button fullWidth prop sets width to 100% 1`] = `
<button
  className="bCPCeX"
/>
`;

exports[`Button renders 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  color: #fff;
  border-width: 0;
  border-style: solid;
  font-size: 14px;
  padding: 9.5px 18px;
}

.c0:disabled {
  opacity: 0.25;
}

.c0:hover {
  background-color: #049;
}

<button
  className="c0"
/>
`;

exports[`Button size large sets height and font-size 1`] = `
<button
  className="aEtwN"
  size="large"
/>
`;

exports[`Button size medium sets height and font-size 1`] = `
<button
  className="goZLpz"
  size="medium"
/>
`;

exports[`Button size small sets height and font-size 1`] = `
<button
  className="crEzzY"
  size="small"
/>
`;

exports[`Button without disabled prop sets 1`] = `
<button
  className="goZLpz"
/>
`;
